    (kali via gates).

    PIG-202: Fix Order by so that user provided comparator func is used for
    quantile determination (kali via gates).

    PIG-231: validation for ship, cache, and skippath  (acmurthy via olgan)

    PIG-232: fix for number of output records when BinaryStirage is used
    (acmurthy via olgan)

    PIG-232: fix for number of input records when BinaryStirage is used
    (acmurthy via olgan)

    PIG-232: let valid cache specifications through (acmurthy via olgan)

    PIG-237: validation of the output directory (pi_song via olgan)

    PIG-236: Fix properties so that values specified via the
    command line (-D) are not ignored (pkamath via gates).

    PIG-198: integration with hadoop 17 (acmurthy via olgan)

    PIG-85: allowing control characters as delimiters for PigStorage (pi_song
    via olgan)

    PIG-250: disabling speculative execution (olgan)

    PIG-250: re-enabling speculative execution and fixing the failure
    (acmurthy via olgan)

    PIG-85: memory optimization (pi_song via olgan)

    PIG-243: Fixing unit tests on windows (daijy via olgan)

    PIG-198: Fixed pig script to pick up hadoop 17 instead of 15 (pi_song via gates). 

    PIG-256: Added variable argument support for UDFs (pi_song)

    PIG-266: fix warnings caused by HOD (olgan)

    PIG-245: added math functions to the piggybank (ajaygarg via olgan)

    PIG-255: make non-default constructors work for algebraic functions
    (ajaygarg via olgan)

    PIG-272: problem with streaming and intermediate store (acmurthy via olgan)

    PIG-243: make unit tests work on windows (daijy via olgan)

    PIG-271: added tutorial to SVN (olgan)

    PIG-235: memory management improvements (pkamath via olgan)

    PIG-284: target for building source jar (oae via olgan)

    PIG-34: added missing licenses

    PIG-34: added LICENSE, NOTICE and README file

    PIG-291: hod.param parameters not passed properly (thatha via olgan)